--- a/config/database.yml
+++ b/config/database.yml
@@ -10,23 +10,28 @@
 #   https://dev.mysql.com/doc/refman/5.7/en/password-hashing.html
 #
 default: &default
-  adapter: mysql2
   encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: root
-  password:
-  socket: /tmp/mysql.sock
+
 
 development:
   <<: *default
-  database: furima_39273_development
+  adapter: mysql2
+  username: root
+  password:
+  host: localhost
+  database: furima-39273_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: furima_39273_test
+  adapter: mysql2
+  username: root
+  password:
+  host: localhost
+  database: furima-39273_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -49,6 +54,5 @@ test:
 #
 production:
   <<: *default
-  database: furima_39273_production
-  username: furima_39273
-  password: <%= ENV['FURIMA_39273_DATABASE_PASSWORD'] %>
+  adapter: postgresql
+  url: <%= ENV['DATABASE_URL'] %>
