--- a/config/database.yml
+++ b/config/database.yml
@@ -20,7 +20,7 @@ development:
   username: root
   password:
   host: localhost
-  database: furima-39273_development
+  database: furima_39273_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -31,7 +31,7 @@ test:
   username: root
   password:
   host: localhost
-  database: furima-39273_test
+  database: furima_39273_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
